Fixed minor details

--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.html
@@ -21,7 +21,7 @@
         </div>
 
         <div *ngIf="g.spotbie_email_or_ph.errors.required">
-          Please enter your or e-mail.
+          Please enter your e-mail.
         </div>
 
       </div> 
@@ -34,10 +34,19 @@
 
       </ng-template>    
 
-      <input class="sb-input"
-            formControlName="spotbie_email_or_ph" 
-            type="text" 
-            placeholder="E-Mail"/>
+      <table class="sb-inputWithIconWrapper">
+
+        <td class="sb-iconInInputWrapper">
+          <i class="fa fa-envelope"></i>
+        </td>
+  
+        <td>          
+
+          <input class="sb-input" id="spotbieLoginUsername" formControlName="spotbie_email_or_ph" type="text" placeholder="E-MAIL" autocomplete="email"/>
+
+        </td>
+  
+      </table>
 
       <button class="spotbie-button spotbie-padding text-uppercase mt-5" (click)="setPassResetPin()">
         Send Reset Link
