--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
@@ -29,9 +29,9 @@
 }
 
 .sb-input{
-    width: 400px;
-    min-width: 400px;
-    max-width: 400px;
+    width: 90%;
+    min-width: 90%;
+    max-width: 90%;
 }
 .spotbie-button{
     width: 350px;
@@ -52,7 +52,36 @@
 .spotbie-invalid-feedback {
     margin-bottom: 30px;
 }
-
+.sb-inputWithIconWrapper{
+    position: relative;
+    margin: 0 auto;
+    min-width: 440px;
+    margin-bottom: 15px;
+    border-spacing: 0px;
+    table-layout: fixed;
+    background: linear-gradient(45deg,#64e56f, #35a99f );
+    opacity: 0.65;
+}
+.sb-inputWithIconWrapper .fa.fa-user,
+.sb-inputWithIconWrapper .fa.fa-envelope,
+.sb-inputWithIconWrapper .fa.fa-lock{
+    font-size: 25px;
+}
+.sb-iconInInputWrapper{
+    background: linear-gradient(45deg,#64e56f, #35a99f);
+    vertical-align: middle;
+    min-width: 50px;
+    color: white;
+}
+.sb-inputWithIconWrapper .sb-input{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    min-width: 100%;
+    width: 100%;
+    border: 1px solid #64e56f;
+    text-align: left;
+    padding-left: 3%;
+}
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1300px) { 
 
@@ -66,16 +95,18 @@
 }
 @media (max-width: 768px) { 
     .sb-input{
-        width: 100%;
-        min-width: 100%;
-        max-width: 100%;        
+        width: 90%;
+        min-width: 90%;
+        max-width: 90%;        
     }      
 }
 @media (max-width: 700px) { 
 
 }
 @media (max-width: 600px) { 
-
+    .sb-inputWithIconWrapper{
+        min-width: 100%;
+    } 
 }
 @media (max-width: 560px) { 
     h2{
@@ -122,6 +153,11 @@
     .spotbie-contact-me-info{
         font-size: 16px;           
     }
+    .sb-inputWithIconWrapper .sb-input{
+        font-size: 16px;
+        padding-top: 12px;
+        padding-bottom: 12px;
+    }      
 }
 
 @media (max-width: 320px) {
