--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -4,10 +4,10 @@
 
     <div class='sb-scroll'>
 
-        <p class='sb-signUpGeneralInstructions spotbie-text-gradient text-uppercase text-center' id="sign_up_general_instructions" #spotbieSignUpIssues>
+        <p class='sb-signUpGeneralInstructions text-uppercase text-center' id="sign_up_general_instructions" #spotbieSignUpIssues>
 
-            <span *ngIf="!business">Sign up to earn rewards</span>
-            <span *ngIf="business">Sign up to find customers</span>
+            <span class='spotbie-text-gradient' *ngIf="!business">Sign up to earn rewards</span>
+            <span class='spotbie-text-gradient' *ngIf="business">Sign up to find customers</span>
             
         </p>
         
