--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -32,7 +32,7 @@
         
     </p>
 
-    <app-download-mobile></app-download-mobile>
+    <app-download-mobile [buttonStyle]="1"></app-download-mobile>
     
     <div class="sb-homePageIconsTable mt-5 mb-4">
     
