--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -1,9 +1,10 @@
 .spotbie-overlay-window{
     z-index: 94;
     overflow-x: hidden;
-    width: 100%;
-    min-width: 100%;
-    max-width: 100%;    
+    width: 102%;
+    min-width: 102%;
+    max-width: 102%;
+    left: -1%;   
 }
 .sb-miniLogoIconM{
     position: relative;
@@ -922,8 +923,8 @@ button.gm-ui-hover-effect:focus-within{
     }
     .map-prompt-mobile{
         overflow-y: scroll;
-        width: 103%;
-        min-width: 103%;        
+        width: 100%;
+        min-width: 100%;        
     }    
     .sb-deliverySortImg{
         width: 13px !important;
@@ -981,13 +982,13 @@ button.gm-ui-hover-effect:focus-within{
         max-height: 50vh;
         min-height: 50vh;
     }               
+    .spotbie-map{
+        width: 100%;
+        min-width: 100%;
+        max-width: 100%;         
+    }    
 }
 @media (max-width: 700px) { 
-    .spotbie-map{
-        width: 99%;
-        min-width: 99%;
-        max-width: 99%;         
-    }
     .map-prompt-v-align{   
         width: 600px;
     }
@@ -1016,6 +1017,12 @@ button.gm-ui-hover-effect:focus-within{
     }    
 }
 @media (max-width: 600px) { 
+    .spotbie-overlay-window{
+        width: 105%;
+        min-width: 105%;
+        max-width: 105%;
+        left: 0%;   
+    }    
     .spotbie-sorting{
         font-size: 9px;
     }
