--- a/src/app/features/business-features/business-features.component.css
+++ b/src/app/features/business-features/business-features.component.css
@@ -1,5 +1,5 @@
 .sb-top-headerImg{
-    background: url('../../../assets/images/home_imgs/spotbie-miami.jpg') !important;
+    background: url('../../../assets/images/home_imgs/spotbie-grow-your-business-with-loyalty-points.jpg') !important;
     background-position: center !important;
     background-size: cover !important;
     background-repeat: no-repeat !important;    
@@ -28,3 +28,20 @@
 .fa-map-marker-alt{
     color: white;
 }
+
+@media (max-width: 768px){
+    .sb-top-headerImg {
+        box-shadow: inset 0 0px 65px #332f3e;
+    }
+}
+
+
+@media (max-width: 650px){
+    .sb-top-headerImg {
+        max-height: 160px;
+        min-height: 160px;
+        height: 160px;
+        box-shadow: inset 0 0px 65px #332f3e;
+    }
+}
+
