--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -2,17 +2,11 @@
     
     <div class="sb-top-headerImg"></div>
 
-    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>
+    <!--<h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>-->
     
-    <img class="sb-logo-withStreet mt-4 mb-4" src="assets/images/spotbie-miami-find-places-to-eat.png" />
-    
-    <button class="spotbie-button sb-getStarted" (click)="signUp()">
-        <span>GET STARTED</span>
-    </button>
+    <img class="sb-logo-withStreet" src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
     <br/><br/>
-
-    <br/>
     
     <h2 class="spotbie-text-gradient text-uppercase">Award Loyalty Points</h2>
     
@@ -20,7 +14,7 @@
         <br/>
         <span class="spotbie-text-gradient"><i class='fa fa-map-marker-alt'></i> to nearby</span>    
         <br/><br/>
-        <span class="sb-text-light-green-gradient text-uppercase"><b>SpotBie Community Members</b></span> 
+        <span class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/home']"><b>SpotBie Community Members</b></span> 
         <br/><br/>
     </p>
     
@@ -32,13 +26,7 @@
         <br/><br/>
     </p>
     
-    <div class="spotbie-button text-uppercase mb-5" [routerLink]="['/business']">
-        SCHEDULE DEMO
-    </div>
-    
-    <app-download-mobile [buttonStyle]="1"></app-download-mobile>
-    
-    <div class="sb-homePageIconsTable mt-5 mb-4">
+    <div class="sb-homePageIconsTable mt-4 mb-4">
     
         <div (click)="spawnCategories('food')">
             <img src="assets/images/home_imgs/find-places-to-eat.svg" /><br/>
@@ -57,6 +45,12 @@
     
     </div>
         
+    <div class="spotbie-button sb-getStarted mt-5 mb-5" (click)="scheduleDemo()">
+        SCHEDULE DEMO
+    </div>
+    
+    <app-download-mobile [buttonStyle]="1"></app-download-mobile>
+
 </section>
 
 <section id="attractNewCustomers" #attractNewCustomers>
