--- a/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.css
+++ b/src/app/spotbie/spotbie-logged-in/business-dashboard/business-dashboard.component.css
@@ -6,8 +6,7 @@ h3, h2{
     position: relative;
     display: block;
     border-bottom: 8px solid #332f3e;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding: 100px 20px;
 }
 .fa-users{
     position: relative;
