--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -8,10 +8,10 @@
 
   <div class='sb-scroll'>
 
-    <p class='sb-signUpGeneralInstructions spotbie-text-gradient text-uppercase text-center mt-4' id="sign_up_general_instructions" #spotbieSignUpIssues>
+    <p class='sb-signUpGeneralInstructions text-uppercase text-center mt-4' id="sign_up_general_instructions" #spotbieSignUpIssues>
       
       <span class='spotbie-text-gradient' *ngIf="!business">Login to earn rewards</span>
-      <span class='spotbie-text-gradien' *ngIf="business">Login to find customers</span>
+      <span class='spotbie-text-gradient' *ngIf="business">Login to find customers</span>
 
     </p>
 
@@ -35,23 +35,33 @@
 
         </div> 
 
-        <div class="spotbie-invalid-feedback 
+        <div *ngIf="f.spotbieUsername.errors">
+          
+          <div class="spotbie-invalid-feedback 
                     text-center text-uppercase
                     spotbie-text-gradient spotbie-error mb-2" *ngIf="f.spotbieUsername.errors.spotbie_fb_account" >
-          You signed up with facebook.
-        </div>   
+            You signed up with facebook.
+          </div>   
 
-        <div class="spotbie-invalid-feedback 
+          <div class="spotbie-invalid-feedback 
                     text-center text-uppercase
                     spotbie-text-gradient spotbie-error mb-2" *ngIf="f.spotbieUsername.errors.spotbie_google_account" >
-          You signed up with google.
-        </div>   
+            You signed up with google.
+          </div>   
 
-        <div class="spotbie-invalid-feedback 
+          <div class="spotbie-invalid-feedback 
                     text-center text-uppercase
                     spotbie-text-gradient spotbie-error mb-2" *ngIf="f.spotbieUsername.errors.spotbie_account" >
-          You signed up with an email address.
-        </div> 
+            You signed up with an email address.
+          </div> 
+
+          <div class="spotbie-invalid-feedback 
+                    text-center text-uppercase mb-2" *ngIf="f.spotbieUsername.errors.wrong_account_type" >          
+            <span class='spotbie-text-gradient spotbie-error cursor-pointer text-decoration-underline' *ngIf="!business" [routerLink]="['/business']">login with business account</span>
+            <span class='spotbie-text-gradient spotbie-error cursor-pointer text-decoration-underline' *ngIf="business" [routerLink]="['/home']">login with personal account</span>          
+          </div> 
+
+        </div>
 
         <table class="sb-inputWithIconWrapper">
     
