--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -80,20 +80,35 @@
                     Email is already in use.
                 </div> 
 
-                <div *ngIf="f.spotbieEmail.errors.spotbie_google_account" >
-                    You signed up with google.
-                </div>
-    
-                <div *ngIf="f.spotbieEmail.errors.spotbie_fb_account" >
-                    You signed up with facebook.
-                </div>
-                
-                <div *ngIf="f.spotbieEmail.errors.spotbie_account" >
-                    You signed up with an email address.
-                </div>
-
             </div>      
 
+            <div *ngIf="f.spotbieEmail.errors">
+                
+                <div class="spotbie-invalid-feedback 
+                            text-center text-uppercase
+                            spotbie-text-gradient spotbie-error mb-2" *ngIf="f.spotbieEmail.errors.spotbie_fb_account" >
+                    You signed up with facebook.
+                </div>   
+
+                <div class="spotbie-invalid-feedback 
+                            text-center text-uppercase
+                            spotbie-text-gradient spotbie-error mb-2" *ngIf="f.spotbieEmail.errors.spotbie_google_account" >
+                    You signed up with google.
+                </div>   
+
+                <div class="spotbie-invalid-feedback 
+                            text-center text-uppercase
+                            spotbie-text-gradient spotbie-error mb-2" *ngIf="f.spotbieEmail.errors.spotbie_account" >
+                    You signed up with an email address.
+                </div> 
+
+                <div class="spotbie-invalid-feedback 
+                            text-center text-uppercase mb-2" *ngIf="f.spotbieUsername.errors.wrong_account_type" >          
+                    <span class='spotbie-text-gradient spotbie-error cursor-pointer text-decoration-underline' *ngIf="!business" [routerLink]="['/business']">login with business account</span>
+                    <span class='spotbie-text-gradient spotbie-error cursor-pointer text-decoration-underline' *ngIf="business" [routerLink]="['/home']">login with personal account</span>          
+                </div> 
+
+            </div>
 
             <table class="sb-inputWithIconWrapper">
 
