home page and more

--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -8,21 +8,16 @@
 
     <br/><br/>
     
-    <h2 class="spotbie-text-gradient text-uppercase">Award Loyalty Points</h2>
+    <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>
+    <br/>
+    <h2 class="spotbie-text-gradient text-uppercase">Award Loyalty Points to nearby 
+        <span class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/home']"><b>SpotBie Community Members</b></span><br/>
+        <span class="spotbie-text-gradient">Food, Shopping, Events.</span>
+    </h2>
     
-    <p class="text-center">  
+    <p class="text-center text-uppercase">        
         <br/>
-        <span class="spotbie-text-gradient"><i class='fa fa-map-marker-alt'></i> to nearby</span>    
-        <br/><br/>
-        <span class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/home']"><b>SpotBie Community Members</b></span> 
-        <br/><br/>
-    </p>
-    
-    <h2><span class="spotbie-text-gradient">Food, Shopping, Events</span></h2>
-    
-    <p class="text-center">        
-        <br/>
-        Offer exclusive discounts, drinks & food, merchandise, and more.
+        <b>Offer exclusive discounts, drinks & food, merchandise, and more.</b>
         <br/><br/>
     </p>
     
@@ -70,9 +65,8 @@
         <br/>
         <h3 class="sb-text-light-green-gradient">LOCAL IMPRESSIONS</h3>
         <br/>
-        <span><i class="fa fa-map-marker-alt" style="font-size: 1.8rem;"></i></span>
-        <br/><br/>
-        <h4 class="spotbie-text-gradient">BRING LOCAL TRAFFIC BY OFFERING</h4>
+        <h4 class="spotbie-text-gradient">BRING LOCAL TRAFFIC WITH</h4>
+        <br/>  
 
     </div>
 
@@ -103,17 +97,15 @@
         <br/>
         <h3 class="sb-text-light-green-gradient">WITH LOYALTY POINTS</h3>
         <br/>
-        <span><img style="max-width: 50px;" src='assets/images/spotbie-loyalty-points.svg' /></span>
-        <br/><br/>
         <h4 class="spotbie-text-gradient">OFFER REWARDS</h4>
+        <br/>  
 
     </div>
 
-    <p class="spotbie-text-gradient text-center">
-        <br/>    
-        Edit your <span class='sb-text-light-green-gradient'>REWARD RATE</span> and <span class='sb-text-light-green-gradient'>REWARD MENU</span> to bring more customers.
+    <p class="spotbie-text-gradient text-center text-uppercase">          
+        Keep them coming back with exclusive rewards.
         <br/><br/> 
-    </p>   
+    </p> 
 
     <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
         <span>GET STARTED</span>
@@ -138,17 +130,15 @@
         <br/>
         <h3 class="sb-text-light-green-gradient">SOMETHING EXCITING</h3>
         <br/>
-        <span><i class="fa fa-money-bill" style="font-size: 1.8rem;"></i></span>
-        <br/><br/>
         <h4 class="spotbie-text-gradient">ATTRACT NEW USERS</h4>
+        <br/>  
 
     </div>
-
-    <p class="spotbie-text-gradient text-center">
-        <br/>    
-        Keep them coming back with exclusive rewards.
+  
+    <p class="spotbie-text-gradient text-center text-uppercase"> 
+        OFFER APPEALING <span class='sb-text-light-green-gradient'>REWARD RATES</span> and <span class='sb-text-light-green-gradient'>REWARDS</span>
         <br/><br/> 
-    </p>   
+    </p>  
 
     <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="signUp()">
         <span>GET STARTED</span>
@@ -158,7 +148,7 @@
 
 <div class="mb-4 sb-readImage" id="sbReadImageUsers"></div>
 
-<div class="sb-footer pt-5 pb-5">
+<div class="sb-footer text-uppercase pt-5 pb-5">
 
     <p [routerLink]="['/terms']">Terms & Privacy Policy</p>
 
