--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -27,7 +27,7 @@
     
     <p class="spotbie-text-gradient text-center">Exclusive discounts, drinks & food, event merchandise, and more.<br/><br/></p>
 
-    <p class="sb-text-light-green-gradient text-center mt-2">
+    <p class="sb-text-light-green-gradient text-center mt-2 mb-4">
         AT ALL SPOTBIE LOCATIONS
         
     </p>
