--- a/src/app/features/business-features/business-features.component.css
+++ b/src/app/features/business-features/business-features.component.css
@@ -28,7 +28,9 @@
 .fa-map-marker-alt{
     color: white;
 }
-
+.sb-getStarted{
+    color: black !important;
+}
 @media (max-width: 768px){
     .sb-top-headerImg {
         box-shadow: inset 0 0px 65px #332f3e;
