--- a/src/app/features/business-features/business-features.component.css
+++ b/src/app/features/business-features/business-features.component.css
@@ -40,9 +40,10 @@
 
 @media (max-width: 650px){
     .sb-top-headerImg {
-        max-height: 160px;
-        min-height: 160px;
-        height: 160px;
+        background: url('../../../assets/images/home_imgs/spotbie-miami.jpg') !important;
+        background-position: center !important;
+        background-size: cover !important;
+        background-repeat: no-repeat !important;            
         box-shadow: inset 0 0px 65px #332f3e;
     }
 }
