--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -10,7 +10,8 @@
     
     <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>
     <br/>
-    <h2 class="spotbie-text-gradient text-uppercase">Award Loyalty Points to nearby 
+
+    <h2 class="spotbie-text-gradient text-uppercase">Award Loyalty Points to 
         <span class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/home']"><b>SpotBie Community Members</b></span><br/>
         <span class="spotbie-text-gradient">Food, Shopping, Events.</span>
     </h2>
@@ -65,7 +66,7 @@
         <br/>
         <h3 class="sb-text-light-green-gradient">LOCAL IMPRESSIONS</h3>
         <br/>
-        <h4 class="spotbie-text-gradient">BRING LOCAL TRAFFIC WITH</h4>
+        <h4 class="spotbie-text-gradient">LOCAL TRAFFIC WITH</h4>
         <br/>  
 
     </div>
