--- a/src/app/features/business-features/business-features.component.css
+++ b/src/app/features/business-features/business-features.component.css
@@ -31,12 +31,21 @@
 .sb-getStarted{
     color: black !important;
 }
+.calendly-inline-widget{
+    min-width: 90vw;
+    width: 90vw;
+    max-width: 90vw;
+    height: 70vh;
+    min-height: 70vh;
+    max-height: 70vh;
+    overflow-x: hidden;
+}
+
 @media (max-width: 768px){
     .sb-top-headerImg {
         box-shadow: inset 0 0px 65px #332f3e;
     }
 }
-
 
 @media (max-width: 650px){
     .sb-top-headerImg {
