--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -41,7 +41,7 @@
     
     </div>
         
-    <div class="spotbie-button sb-getStarted mt-5 mb-5" (click)="scheduleDemo()">
+    <div class="spotbie-button sb-getStarted mt-5 mb-5" (click)="calendly()">
         SCHEDULE DEMO
     </div>
     
