--- a/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.html
+++ b/src/app/spotbie/ads/nearby-featured-ad/nearby-featured-ad.component.html
@@ -13,7 +13,7 @@
         <span class='spotbie-text-gradient sb-sponsoredName text-uppercase'>{{ business.name }}</span>
 
         <br/>
-        <span class='sb-text-light-green-gradient sb-totalRewards text-uppercase'>{{ totalRewards }} REWARDS</span>
+        <span class='sb-text-light-green-gradient sb-totalRewards text-uppercase' style="font-size: 1rem;">{{ totalRewards }} REWARDS</span>
 
         <br/>
         <span class='sb-text-light-green-gradient sb-distanceMiles text-uppercase'>
@@ -22,11 +22,11 @@
         </span>
 
         <br/>
-        <span class='sb-text-light-green-gradient sb-perDollar text-uppercase' *ngIf="!editMode">
+        <span class='sb-text-light-green-gradient sb-perDollar text-uppercase' style="font-size: 1.5rem;" *ngIf="!editMode">
             {{ (business.loyalty_point_dollar_percent_value / 100) | currency : 'USD' }} per dollar
         </span>
         
-        <span class='sb-text-light-green-gradient sb-perDollar text-uppercase' *ngIf="editMode">
+        <span class='sb-text-light-green-gradient sb-perDollar text-uppercase' style="font-size: 1.5rem;" *ngIf="editMode">
             {{ (loyaltyPointBalance.loyalty_point_dollar_percent_value / 100) | currency : 'USD' }} per dollar
         </span>
 
