Grow Your Business Banner, Login Screen Widths

--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -6,19 +6,20 @@
     
     <img class="sb-logo-withStreet" src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
-    <br/><br/>
+    <br/>
     
     <h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>
     <br/>
 
-    <h2 class="spotbie-text-gradient text-uppercase">Award Loyalty Points to 
-        <span class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/home']"><b>SpotBie Community Members</b></span><br/>
-        <span class="spotbie-text-gradient">Food, Shopping, Events.</span>
+    <h2 class="text-uppercase"><span class='spotbie-text-gradient'>Award Loyalty Points to </span>
+        <span class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/home']"><b>SpotBie Community Members</b></span>
+        <br/><br/>
+        <span class="spotbie-text-gradient"><b>Food, Shopping, Events</b></span>
     </h2>
     
     <p class="text-center text-uppercase">        
         <br/>
-        <b>Offer exclusive discounts, drinks & food, merchandise, and more.</b>
+        Offer exclusive discounts, drinks & food, merchandise, and more.
         <br/><br/>
     </p>
     
@@ -59,13 +60,12 @@
         - NEW CUSTOMERS -
     </h2>
 
-    <img class='sb-whiteIconBg right' src='assets/images/qr/spotbie-white-icon.png' />
+    <div class='sb-whiteIconBg right'></div>
 
     <div class="text-uppercase text-center">
 
         <br/>
-        <h3 class="sb-text-light-green-gradient">LOCAL IMPRESSIONS</h3>
-        <br/>
+        <h3 class="sb-text-light-green-gradient">ATTRACT</h3>
         <h4 class="spotbie-text-gradient">LOCAL TRAFFIC WITH</h4>
         <br/>  
 
@@ -91,7 +91,7 @@
         - RETAIN CUSTOMERS -
     </h2>
 
-    <img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
+    <div class='sb-whiteIconBg left'></div>
 
     <div class="text-uppercase text-center">
 
@@ -104,7 +104,7 @@
     </div>
 
     <p class="spotbie-text-gradient text-center text-uppercase">          
-        Keep them coming back with exclusive rewards.
+        Keep them coming back with exclusive rewards
         <br/><br/> 
     </p> 
 
@@ -124,14 +124,13 @@
         - ENGAGE YOUR AUDIENCE -
     </h2>
 
-    <img class='sb-whiteIconBg right' src='assets/images/qr/spotbie-white-icon.png' />
+    <div class='sb-whiteIconBg right'></div>
 
     <div class="text-uppercase text-center">
 
         <br/>
         <h3 class="sb-text-light-green-gradient">SOMETHING EXCITING</h3>
-        <br/>
-        <h4 class="spotbie-text-gradient">ATTRACT NEW USERS</h4>
+        <h4 class="spotbie-text-gradient">FOR CONSUMERS</h4>
         <br/>  
 
     </div>
