--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -11,7 +11,7 @@
     </div>
     
     <img class="sb-logo-withStreet mt-4 mb-4" src="assets/images/spotbie-miami-find-places-to-eat.png" />
-    
+
     <p class="text-center">    
         
         <span class="spotbie-text-gradient">from nearby</span>
@@ -64,7 +64,7 @@
         - PLACES TO EAT -
     </h2>
 
-    <img class='sb-whiteIconBg left' src='assets/images/qr/spotbie-white-icon.png' />
+    <div class='sb-whiteIconBg left'></div>
 
     <div class="text-uppercase text-center">
 
@@ -102,7 +102,7 @@
         - RETAIL STORES -
     </h2>
 
-    <img class='sb-whiteIconBg right' src='assets/images/qr/spotbie-white-icon.png' />
+    <div class='sb-whiteIconBg right'></div>
 
     <div class="text-uppercase text-center">
 
@@ -139,7 +139,7 @@
         - EVENTS NEAR YOU -
     </h2>
     
-    <img class='sb-whiteIconBg' src='assets/images/qr/spotbie-white-icon.png' />
+    <div class='sb-whiteIconBg left'></div>
     
     <div class="text-uppercase text-center">
         
