--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
@@ -4,7 +4,7 @@
     background-size: cover;
     background-position: center; 
     background-color: #32303e;   
-    z-index: 99 !important;
+    z-index: 98 !important;
 }
 .sb-closeButton{
     top: 0px;
@@ -81,6 +81,10 @@
     border: 1px solid #64e56f;
     text-align: left;
     padding-left: 3%;
+}
+.sb-closeButton{
+    top: 75px;
+    right: 1%;
 }
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 1300px) { 
