--- a/src/app/features/business-features/business-features.component.css
+++ b/src/app/features/business-features/business-features.component.css
@@ -41,6 +41,25 @@
     overflow-x: hidden;
 }
 
+
+@media (max-width: 1600px){
+    .sb-top-headerImg{
+        height: 550px;
+        min-height: 550px;
+    }
+}
+@media (max-width: 1250px){
+    .sb-top-headerImg{
+        height: 450px;
+        min-height: 450px;
+    }
+}
+@media (max-width: 1000px){
+    .sb-top-headerImg{
+        height: 400px;
+        min-height: 400px;
+    }
+}
 @media (max-width: 768px){
     .sb-top-headerImg {
         box-shadow: inset 0 0px 65px #332f3e;
@@ -53,7 +72,10 @@
         background-position: center !important;
         background-size: cover !important;
         background-repeat: no-repeat !important;            
-        box-shadow: inset 0 0px 65px #332f3e;
+        box-shadow: inset 0px -80px 65px #332f3e;
+        max-height: 300px;
+        min-height: 300px;
+        height: 300px;     
     }
     .spotbie-overlay-window{
         width: 104%;
