--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.css
@@ -50,6 +50,7 @@
 }
 .spotbie-overlay-window{
     padding-bottom: 80px;
+    background-color: #32303e !important;
     background: url('../../../../assets/images/home_imgs/jpg/spotbie-login-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
