Check Search Results Fit Bounds & Facebook Permissions Update

--- a/src/app/features/user-features/user-features.component.html
+++ b/src/app/features/user-features/user-features.component.html
@@ -3,7 +3,7 @@
     <div class="sb-top-headerImg"></div>
 
     <h1 class="sb-text-light-green-gradient text-uppercase">
-        LOYALTY POINTS
+        EARN<br/>LOYALTY POINTS
     </h1>
     
     <div class="spotbie-button sb-getStarted" (click)="spawnCategories('food')">
@@ -17,7 +17,7 @@
         <span class="spotbie-text-gradient">from nearby</span>
         
         <br/><br/>
-        <a class="spotbie-text-link text-uppercase" [routerLink]="['/business']">SpotBie Community Members</a> 
+        <a class="sb-text-light-green-gradient text-uppercase" [routerLink]="['/business']">SpotBie Community Members</a> 
         
         <br/><br/>
         <span class="spotbie-text-gradient">Food, Shopping, Events</span>
@@ -28,12 +28,11 @@
     <p class="spotbie-text-gradient text-center">Exclusive discounts, drinks & food, event merchandise, and more.<br/><br/></p>
 
     <p class="sb-text-light-green-gradient text-center mt-2 mb-4">
-        AT ALL SPOTBIE LOCATIONS
-        
+        AT ALL SPOTBIE LOCATIONS        
     </p>
 
     <app-download-mobile [buttonStyle]="1"></app-download-mobile>
-    
+
     <div class="sb-homePageIconsTable mt-5 mb-4">
     
         <div (click)="spawnCategories('food')">
@@ -71,21 +70,18 @@
         <br/>
         <h3 class="sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
         <br/>
-        <span><i class="fa fa-hamburger"></i></span>
-        <br/><br/>
-        <h4 class="spotbie-text-gradient">REDEEM REWARDS</h4>
 
     </div>
-
-    <p class="spotbie-text-gradient text-center mt-2 mb-2">
-        Easily find places to eat near you with our map.
-    </p>
 
     <p class="spotbie-text-gradient text-center">
         <br/>    
         Exclusive rewards as menu items, points, or discounts.
         <br/><br/> 
     </p>   
+
+    <p class="spotbie-text-gradient text-center mt-2 mb-2">
+        Easily find places to eat near you with our map.
+    </p>
 
     <button class="spotbie-button sb-getStarted mt-4 mb-5" (click)="spawnCategories('food')">
         <span>GET STARTED</span>
@@ -109,9 +105,6 @@
         <br/>
         <h3 class="sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
         <br/>
-        <span><i class='fa fa-money-bill'></i></span>
-        <br/><br/>
-        <h4 class="spotbie-text-gradient">EVERYTIME YOU SHOP</h4>
         
     </div>
 
@@ -145,10 +138,6 @@
         
         <br/>
         <h3 class="spotbie-text-gradient sb-text-light-green-gradient">EARN LOYALTY POINTS</h3>
-        <br/>
-        <span><i class='fa fa-glass-cheers'></i></span>
-        <br/><br/>
-        <h4 class="spotbie-text-gradient">AT EVENTS</h4>
         
     </div>
     
