Fixed problems with Ad/Membership Payments Page

--- a/src/app/bugs/bugs.component.html
+++ b/src/app/bugs/bugs.component.html
@@ -46,8 +46,8 @@
         
         <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">BUG SUBMITTED</h4>
 
-        <div class="sb-verificationCheck sb-text-light-green-gradient mt-4 mb-4">
-            <i class="fa fa-check"></i>
+        <div class="sb-verificationCheck mt-4 mb-4">
+            <i class="fa fa-check sb-text-light-green-gradient"></i>
         </div>
 
         <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">THANK YOU</h4>
