--- a/src/app/features/business-features/business-features.component.html
+++ b/src/app/features/business-features/business-features.component.html
@@ -4,7 +4,7 @@
 
     <!--<h1 class="text-uppercase sb-text-light-green-gradient" style="font-size: 1.8rem; padding: 0 10px;">GROW YOUR BUSINESS</h1>-->
     
-    <img class="sb-logo-withStreet" src="assets/images/spotbie-miami-find-places-to-eat.png" />
+    <img class="sb-logo-withStreet" #scheduleDemo src="assets/images/spotbie-miami-find-places-to-eat.png" />
 
     <br/>
     
