--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -332,7 +332,7 @@
           SPOTBIE COMMUNITY MEMBERS          
         </div>
 
-        <div class='mt-5' style="margin-top:0px;" *ngIf="communityMemberList.length != 0 && isDesktop"></div>
+        <div class='mt-5' style="margin-top:0px;" *ngIf="communityMemberList.length == 0 && isDesktop"></div>
 
         <!-- First let's display the spotbie community member list for -->
         <div class='spotbie-search-result spotbie-communityMember-search-result' 
