Removed Facebook login :)

--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -133,9 +133,9 @@
 
     </div>
 
-    <button class="btn spotbie-button sb-fb-logIn-btn spotbie-padding" (click)="signInWithFB()">
-      LOGIN WITH FACEBOOK <!--<i class="fa fa-facebook"></i>-->
-    </button>
+    <!--<button class="btn spotbie-button sb-fb-logIn-btn spotbie-padding" (click)="signInWithFB()">
+      LOGIN WITH FACEBOOK <i class="fa fa-facebook"></i>
+    </button>-->
 
     <button class="btn spotbie-button sb-google-logIn-btn spotbie-padding" (click)="signInWithGoogle()">
       LOGIN WITH GOOGLE <!--<i class="fa fa-google-plus"></i>-->
